tests/parsing/dimacs/errors/001_clause_empty_3.expected
File "tests/parsing/dimacs/errors/001_clause_empty_3.cnf", line 3, character 0-1:
3 | 0
    ^
Error while parsing an input sentence, read the integer '0',
      but expected a p-cnf header if there hasn't been one yet, or a clause
      starting with a non-zero integer.
